l22/l22_parser.output
Terminals unused in grammar

    tPRIVATE


Grammar

    0 $accept: file $end

    1 file: %empty
    2     | declarations program
    3     | declarations
    4     | program

    5 program: tBEGIN block tEND

    6 declaration: variable ';'
    7            | data_type tIDENTIFIER '=' expr ';'
    8            | data_type tIDENTIFIER '=' block_expr
    9            | tVAR tIDENTIFIER '=' expr ';'
   10            | tVAR tIDENTIFIER '=' block_expr
   11            | tUSE data_type tIDENTIFIER ';'
   12            | tPUBLIC data_type tIDENTIFIER ';'
   13            | tPUBLIC data_type tIDENTIFIER '=' expr ';'
   14            | tPUBLIC data_type tIDENTIFIER '=' block_expr
   15            | tPUBLIC tVAR tIDENTIFIER '=' expr ';'
   16            | tPUBLIC tVAR tIDENTIFIER '=' block_expr
   17            | tPUBLIC tIDENTIFIER '=' expr ';'
   18            | tPUBLIC tIDENTIFIER '=' block_expr
   19            | tFOREIGN func_type tIDENTIFIER ';'

   20 declarations: declarations declaration
   21             | declaration

   22 variable: data_type tIDENTIFIER

   23 variables: variables ',' variable
   24          | variable

   25 func_type: data_type '<' '>'
   26          | data_type '<' data_types '>'

   27 data_type: tINT_TYPE
   28          | tDOUBLE_TYPE
   29          | tTEXT_TYPE
   30          | func_type
   31          | tVOID_TYPE
   32          | '[' data_type ']'

   33 data_types: data_types ',' data_type
   34           | data_type

   35 block: '{' declarations instructions '}'
   36      | '{' instructions '}'
   37      | '{' declarations '}'
   38      | '{' '}'

   39 instructions: instruction
   40             | block_instruction
   41             | instruction ';' instructions
   42             | block_instruction instructions

   43 block_instruction: block_expr
   44                  | tIF '(' expr ')' tTHEN block
   45                  | tIF '(' expr ')' tTHEN block elif
   46                  | tWHILE '(' expr ')' tDO block
   47                  | tRETURN block_expr

   48 instruction: expr
   49            | tWRITE exprs
   50            | tWRITELN exprs
   51            | tAGAIN
   52            | tSTOP
   53            | tRETURN expr
   54            | tRETURN
   55            | tSWEEP expr tTYPE_DECL expr tWITH expr '.' '.' expr
   56            | tWITH expr tCHANGE expr tTYPE_DECL expr '.' '.' expr

   57 elif: tELSE block
   58     | tELIF '(' expr ')' tTHEN block
   59     | tELIF '(' expr ')' tTHEN block elif

   60 exprs: exprs ',' expr
   61      | expr
   62      | exprs ',' block_expr
   63      | block_expr

   64 string: tSTRING
   65       | string tSTRING

   66 expr: tINTEGER
   67     | tDOUBLE
   68     | string
   69     | tNULL
   70     | '+' expr
   71     | '-' expr
   72     | expr '+' expr
   73     | expr '-' expr
   74     | expr '*' expr
   75     | expr '%' expr
   76     | expr '/' expr
   77     | expr '<' expr
   78     | expr '>' expr
   79     | expr tGE expr
   80     | expr tLE expr
   81     | expr tNE expr
   82     | expr tEQ expr
   83     | expr tOR expr
   84     | expr tAND expr
   85     | tNOT expr
   86     | '(' expr ')'
   87     | '[' expr ']'
   88     | lval '?'
   89     | lval
   90     | lval '=' expr
   91     | tSIZEOF '(' expr ')'
   92     | tINPUT
   93     | '(' function_def ')' '(' exprs ')'
   94     | '(' function_def ')' '(' ')'
   95     | lval '(' exprs ')'
   96     | lval '(' ')'
   97     | '@' '(' exprs ')'
   98     | '@' '(' ')'

   99 function_def: '(' ')' tTYPE_DECL data_type ':' block
  100             | '(' variables ')' tTYPE_DECL data_type ':' block

  101 block_expr: function_def
  102           | lval '=' block_expr

  103 lval: tIDENTIFIER
  104     | expr '[' expr ']'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 75
    '(' (40) 44 45 46 58 59 86 91 93 94 95 96 97 98 99 100
    ')' (41) 44 45 46 58 59 86 91 93 94 95 96 97 98 99 100
    '*' (42) 74
    '+' (43) 70 72
    ',' (44) 23 33 60 62
    '-' (45) 71 73
    '.' (46) 55 56
    '/' (47) 76
    ':' (58) 99 100
    ';' (59) 6 7 9 11 12 13 15 17 19 41
    '<' (60) 25 26 77
    '=' (61) 7 8 9 10 13 14 15 16 17 18 90 102
    '>' (62) 25 26 78
    '?' (63) 88
    '@' (64) 97 98
    '[' (91) 32 87 104
    ']' (93) 32 87 104
    '{' (123) 35 36 37 38
    '}' (125) 35 36 37 38
    error (256)
    tINT_TYPE (258) 27
    tDOUBLE_TYPE (259) 28
    tTEXT_TYPE (260) 29
    tVOID_TYPE (261) 31
    tFOREIGN (262) 19
    tUSE (263) 11
    tPUBLIC (264) 12 13 14 15 16 17 18
    tPRIVATE (265)
    tVAR (266) 9 10 15 16
    tTYPE_DECL (267) 55 56 99 100
    tAND (268) 84
    tOR (269) 83
    tNOT (270) 85
    tGE (271) 79
    tLE (272) 80
    tEQ (273) 82
    tNE (274) 81
    tIF (275) 44 45
    tTHEN (276) 44 45 58 59
    tELIF (277) 58 59
    tELSE (278) 57
    tWHILE (279) 46
    tDO (280) 46
    tSTOP (281) 52
    tAGAIN (282) 51
    tWRITE (283) 49
    tWRITELN (284) 50
    tRETURN (285) 47 53 54
    tBEGIN (286) 5
    tEND (287) 5
    tSIZEOF (288) 91
    tINPUT (289) 92
    tUNARY (290)
    tSWEEP (291) 55
    tWITH (292) 55 56
    tCHANGE (293) 56
    tINTEGER <i> (294) 66
    tIDENTIFIER <s> (295) 7 8 9 10 11 12 13 14 15 16 17 18 19 22 103
    tSTRING <s> (296) 64 65
    tDOUBLE <d> (297) 67
    tNULL (298) 69


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    file (65)
        on left: 1 2 3 4
        on right: 0
    program <node> (66)
        on left: 5
        on right: 2 4
    declaration <node> (67)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 20 21
    declarations <sequence> (68)
        on left: 20 21
        on right: 2 3 20 35 37
    variable <node> (69)
        on left: 22
        on right: 6 23 24
    variables <sequence> (70)
        on left: 23 24
        on right: 23 100
    func_type <type> (71)
        on left: 25 26
        on right: 19 30
    data_type <type> (72)
        on left: 27 28 29 30 31 32
        on right: 7 8 11 12 13 14 22 25 26 32 33 34 99 100
    data_types <types> (73)
        on left: 33 34
        on right: 26 33
    block <block_node> (74)
        on left: 35 36 37 38
        on right: 5 44 45 46 57 58 59 99 100
    instructions <sequence> (75)
        on left: 39 40 41 42
        on right: 35 36 41 42
    block_instruction <node> (76)
        on left: 43 44 45 46 47
        on right: 40 42
    instruction <node> (77)
        on left: 48 49 50 51 52 53 54 55 56
        on right: 39 41
    elif <node> (78)
        on left: 57 58 59
        on right: 45 59
    exprs <sequence> (79)
        on left: 60 61 62 63
        on right: 49 50 60 62 93 95 97
    string <s> (80)
        on left: 64 65
        on right: 65 68
    expr <expression> (81)
        on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 7 9 13 15 17 44 45 46 48 53 55 56 58 59 60 61 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 90 91 104
    function_def <expression> (82)
        on left: 99 100
        on right: 93 94 101
    block_expr <expression> (83)
        on left: 101 102
        on right: 8 10 14 16 18 43 47 62 63 102
    lval <lvalue> (84)
        on left: 103 104
        on right: 88 89 90 95 96 102


State 0

    0 $accept: . file $end

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    tBEGIN        shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 1 (file)

    file          go to state 11
    program       go to state 12
    declaration   go to state 13
    declarations  go to state 14
    variable      go to state 15
    func_type     go to state 16
    data_type     go to state 17


State 1

   27 data_type: tINT_TYPE .

    $default  reduce using rule 27 (data_type)


State 2

   28 data_type: tDOUBLE_TYPE .

    $default  reduce using rule 28 (data_type)


State 3

   29 data_type: tTEXT_TYPE .

    $default  reduce using rule 29 (data_type)


State 4

   31 data_type: tVOID_TYPE .

    $default  reduce using rule 31 (data_type)


State 5

   19 declaration: tFOREIGN . func_type tIDENTIFIER ';'

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '['           shift, and go to state 10

    func_type  go to state 18
    data_type  go to state 19


State 6

   11 declaration: tUSE . data_type tIDENTIFIER ';'

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '['           shift, and go to state 10

    func_type  go to state 16
    data_type  go to state 20


State 7

   12 declaration: tPUBLIC . data_type tIDENTIFIER ';'
   13            | tPUBLIC . data_type tIDENTIFIER '=' expr ';'
   14            | tPUBLIC . data_type tIDENTIFIER '=' block_expr
   15            | tPUBLIC . tVAR tIDENTIFIER '=' expr ';'
   16            | tPUBLIC . tVAR tIDENTIFIER '=' block_expr
   17            | tPUBLIC . tIDENTIFIER '=' expr ';'
   18            | tPUBLIC . tIDENTIFIER '=' block_expr

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tVAR          shift, and go to state 21
    tIDENTIFIER   shift, and go to state 22
    '['           shift, and go to state 10

    func_type  go to state 16
    data_type  go to state 23


State 8

    9 declaration: tVAR . tIDENTIFIER '=' expr ';'
   10            | tVAR . tIDENTIFIER '=' block_expr

    tIDENTIFIER  shift, and go to state 24


State 9

    5 program: tBEGIN . block tEND

    '{'  shift, and go to state 25

    block  go to state 26


State 10

   32 data_type: '[' . data_type ']'

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '['           shift, and go to state 10

    func_type  go to state 16
    data_type  go to state 27


State 11

    0 $accept: file . $end

    $end  shift, and go to state 28


State 12

    4 file: program .

    $default  reduce using rule 4 (file)


State 13

   21 declarations: declaration .

    $default  reduce using rule 21 (declarations)


State 14

    2 file: declarations . program
    3     | declarations .
   20 declarations: declarations . declaration

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    tBEGIN        shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 3 (file)

    program      go to state 29
    declaration  go to state 30
    variable     go to state 15
    func_type    go to state 16
    data_type    go to state 17


State 15

    6 declaration: variable . ';'

    ';'  shift, and go to state 31


State 16

   30 data_type: func_type .

    $default  reduce using rule 30 (data_type)


State 17

    7 declaration: data_type . tIDENTIFIER '=' expr ';'
    8            | data_type . tIDENTIFIER '=' block_expr
   22 variable: data_type . tIDENTIFIER
   25 func_type: data_type . '<' '>'
   26          | data_type . '<' data_types '>'

    tIDENTIFIER  shift, and go to state 32
    '<'          shift, and go to state 33


State 18

   19 declaration: tFOREIGN func_type . tIDENTIFIER ';'
   30 data_type: func_type .

    tIDENTIFIER  shift, and go to state 34

    $default  reduce using rule 30 (data_type)


State 19

   25 func_type: data_type . '<' '>'
   26          | data_type . '<' data_types '>'

    '<'  shift, and go to state 33


State 20

   11 declaration: tUSE data_type . tIDENTIFIER ';'
   25 func_type: data_type . '<' '>'
   26          | data_type . '<' data_types '>'

    tIDENTIFIER  shift, and go to state 35
    '<'          shift, and go to state 33


State 21

   15 declaration: tPUBLIC tVAR . tIDENTIFIER '=' expr ';'
   16            | tPUBLIC tVAR . tIDENTIFIER '=' block_expr

    tIDENTIFIER  shift, and go to state 36


State 22

   17 declaration: tPUBLIC tIDENTIFIER . '=' expr ';'
   18            | tPUBLIC tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 37


State 23

   12 declaration: tPUBLIC data_type . tIDENTIFIER ';'
   13            | tPUBLIC data_type . tIDENTIFIER '=' expr ';'
   14            | tPUBLIC data_type . tIDENTIFIER '=' block_expr
   25 func_type: data_type . '<' '>'
   26          | data_type . '<' data_types '>'

    tIDENTIFIER  shift, and go to state 38
    '<'          shift, and go to state 33


State 24

    9 declaration: tVAR tIDENTIFIER . '=' expr ';'
   10            | tVAR tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 39


State 25

   35 block: '{' . declarations instructions '}'
   36      | '{' . instructions '}'
   37      | '{' . declarations '}'
   38      | '{' . '}'

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    tNOT          shift, and go to state 40
    tIF           shift, and go to state 41
    tWHILE        shift, and go to state 42
    tSTOP         shift, and go to state 43
    tAGAIN        shift, and go to state 44
    tWRITE        shift, and go to state 45
    tWRITELN      shift, and go to state 46
    tRETURN       shift, and go to state 47
    tSIZEOF       shift, and go to state 48
    tINPUT        shift, and go to state 49
    tSWEEP        shift, and go to state 50
    tWITH         shift, and go to state 51
    tINTEGER      shift, and go to state 52
    tIDENTIFIER   shift, and go to state 53
    tSTRING       shift, and go to state 54
    tDOUBLE       shift, and go to state 55
    tNULL         shift, and go to state 56
    '+'           shift, and go to state 57
    '-'           shift, and go to state 58
    '('           shift, and go to state 59
    '['           shift, and go to state 60
    '}'           shift, and go to state 61
    '@'           shift, and go to state 62

    declaration        go to state 13
    declarations       go to state 63
    variable           go to state 15
    func_type          go to state 16
    data_type          go to state 17
    instructions       go to state 64
    block_instruction  go to state 65
    instruction        go to state 66
    string             go to state 67
    expr               go to state 68
    function_def       go to state 69
    block_expr         go to state 70
    lval               go to state 71


State 26

    5 program: tBEGIN block . tEND

    tEND  shift, and go to state 72


State 27

   25 func_type: data_type . '<' '>'
   26          | data_type . '<' data_types '>'
   32 data_type: '[' data_type . ']'

    '<'  shift, and go to state 33
    ']'  shift, and go to state 73


State 28

    0 $accept: file $end .

    $default  accept


State 29

    2 file: declarations program .

    $default  reduce using rule 2 (file)


State 30

   20 declarations: declarations declaration .

    $default  reduce using rule 20 (declarations)


State 31

    6 declaration: variable ';' .

    $default  reduce using rule 6 (declaration)


State 32

    7 declaration: data_type tIDENTIFIER . '=' expr ';'
    8            | data_type tIDENTIFIER . '=' block_expr
   22 variable: data_type tIDENTIFIER .

    '='  shift, and go to state 74

    $default  reduce using rule 22 (variable)


State 33

   25 func_type: data_type '<' . '>'
   26          | data_type '<' . data_types '>'

    tINT_TYPE     shift, and go to state 1
    tDOUBLE_TYPE  shift, and go to state 2
    tTEXT_TYPE    shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '>'           shift, and go to state 75
    '['           shift, and go to state 10

    func_type   go to state 16
    data_type   go to state 76
    data_types  go to state 77


State 34

   19 declaration: tFOREIGN func_type tIDENTIFIER . ';'

    ';'  shift, and go to state 78


State 35

   11 declaration: tUSE data_type tIDENTIFIER . ';'

    ';'  shift, and go to state 79


State 36

   15 declaration: tPUBLIC tVAR tIDENTIFIER . '=' expr ';'
   16            | tPUBLIC tVAR tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 80


State 37

   17 declaration: tPUBLIC tIDENTIFIER '=' . expr ';'
   18            | tPUBLIC tIDENTIFIER '=' . block_expr

    tNOT         shift, and go to state 40
    tSIZEOF      shift, and go to state 48
    tINPUT       shift, and go to state 49
    tINTEGER     shift, and go to state 52
    tIDENTIFIER  shift, and go to state 53
    tSTRING      shift, and go to state 54
    tDOUBLE      shift, and go to state 55
    tNULL        shift, and go to state 56
    '+'          shift, and go to state 57
    '-'          shift, and go to state 58
    '('          shift, and go to state 59
    '['          shift, and go to state 81
    '@'          shift, and go to state 62

    string        go to state 67
    expr          go to state 82
    function_def  go to state 69
    block_expr    go to state 83
    lval          go to state 71


State 38

   12 declaration: tPUBLIC data_type tIDENTIFIER . ';'
   13            | tPUBLIC data_type tIDENTIFIER . '=' expr ';'
   14            | tPUBLIC data_type tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 84
    ';'  shift, and go to state 85


State 39

    9 declaration: tVAR tIDENTIFIER '=' . expr ';'
   10            | tVAR tIDENTIFIER '=' . block_expr
